--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -9,12 +9,11 @@
     justify-content: center;
     align-items: center;
 
-    background-color: #FBE7C6;
+    background-color: #343a40;
 
-    color: grey;
+    color: white;
 
     h1{
         font-weight: 800;
-        text-shadow: 1px 1px coral;
     }
 }
